add available aggreagations to api, bind child views to configuration component, map dto to models, add/remove column click handlers
